fix tags alignment

--- a/public/css/comma-list.scss
+++ b/public/css/comma-list.scss
@@ -19,3 +19,9 @@ ul.commas {
         }
     }
 }
+
+.tags {
+    .commas {
+        justify-content: flex-start;
+    }
+}
